--- a/SotsRestApi/Web.config
+++ b/SotsRestApi/Web.config
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301879
@@ -10,10 +10,8 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="SOTSDB" connectionString="host=localhost;port=5432;database=SOTSDB;user id=postgres;password=postgres"
-      providerName="Npgsql" />
-    <add name="SotsRestApiContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=SotsRestApiContext-20190128180038; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|SotsRestApiContext-20190128180038.mdf"
-      providerName="System.Data.SqlClient" />
+    <add name="SOTSDB" connectionString="host=25.36.29.207;port=5432;database=SOTSDB;user id=postgres;password=postgres" providerName="Npgsql" />
+    <add name="SotsRestApiContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=SotsRestApiContext-20190128180038; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|SotsRestApiContext-20190128180038.mdf" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -70,6 +68,14 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.2.4.0" newVersion="5.2.4.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.4.0" newVersion="5.2.4.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.4.0" newVersion="5.2.4.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
